test/parser/error/err_16_assign_missing_op.pl0
program p; 
var x; 
begin 
x 1 
end